implemented getUsers route
